# minix-host-tools

./: README.md
tools/: CMakeLists.txt
tools/compat/: CMakeLists.txt
tools/join/: CMakeLists.txt
tools/lex/: CMakeLists.txt
tools/lib/: CMakeLists.txt
tools/lib/compat/: CMakeLists.txt  compat_pwd.h  nbtool_config.h
tools/lib/compat/sys/: queue.h
tools/lib/libterminfo/: CMakeLists.txt  envwrap.sh
tools/mkfs.mfs/: CMakeLists.txt
tools/mkproto/: CMakeLists.txt  mkproto.c
tools/mktemp/: CMakeLists.txt
tools/mtree/: CMakeLists.txt
tools/nbperf/: CMakeLists.txt  nbperf.c
tools/pwd_mkdb/: CMakeLists.txt
tools/tic/: CMakeLists.txt
tools/toproto/: CMakeLists.txt
tools/tsort/: CMakeLists.txt
tools/yacc/: CMakeLists.txt
