GET_FILENAME_COMPONENT (COMPONENT ${CMAKE_CURRENT_SOURCE_DIR} NAME)

ADD_EXECUTABLE (${COMPONENT}
                mkfs.c)
INCLUDE_DIRECTORIES (v3)
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/lib/compat 
                     ${NBTOOL_CONFIG_DIR})
ADD_DEFINITIONS (-DHAVE_NBTOOL_CONFIG_H)
ADD_DEPENDENCIES (${COMPONENT} nbtool_config)