GET_FILENAME_COMPONENT (COMPONENT ${CMAKE_CURRENT_SOURCE_DIR} NAME)

ADD_EXECUTABLE (nb${COMPONENT}
                tsort.c)
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/lib/compat 
                     ${NBTOOL_CONFIG_DIR})
ADD_DEFINITIONS (-DHAVE_NBTOOL_CONFIG_H=1)
ADD_DEFINITIONS (-D_FILE_OFFSET_BITS=64)
ADD_DEPENDENCIES (nb${COMPONENT} nbtool_config)
TARGET_LINK_LIBRARIES (nb${COMPONENT} compat)

INSTALL (TARGETS nb${COMPONENT}
         RUNTIME DESTINATION ${INSTALL_DIR})
